--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /test/unit/coverage/
-
+src/views/offlineRoom.vue
+api.txt
 # Editor directories and files
 .idea
 .vscode
